[package]
name = "rocket_blog_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
diesel = "2"
diesel-async = { version = "0.4", features = ["postgres"] }
dotenvy = "0.15"
serde = "1"
serde_json = "1"


[dependencies.rocket_db_pools]
version = "0.1"
features = ["diesel_postgres"]
